# dagster-dbt-weather-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile.dagster  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dbt_project/: dbt_project.yml
dbt_project/models/core/: core.yml  dim_sales.sql  dim_weather_daily.sql
dbt_project/models/marts/: fct_daily_sales.sql  fct_weather_daily_summary.sql  fct_weather_rainy_day_rate_7d.sql  fct_weather_temperature_trend_7d.sql  marts.yml
dbt_project/models/staging/: sources.yml  stg_sales.sql  stg_weather_hourly.sql
orchestration/: __init__.py  assets.py  definitions.py  jobs.py
